fixed a color contrast issue

--- a/chamber/styles/small.css
+++ b/chamber/styles/small.css
@@ -89,11 +89,14 @@ header span {
 }
 
 .navigation li {
-    color: var(--white);
+    color: var(--black);
 }
 
 .navigation li.current {
     background-color: var(--medPurple);
+    color: var(--black);
+
+
 }
 
 .navigation li.current a {
